loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: not found: type int
var x:int =0
      ^