loopfor.LoopFor.scala.code
var x:int =0
while (estSurBiscuit() == false){
  avance()
  x=x+1
}
prendBiscuit()
for(k<- 0 to x){
  recule()
}
poseBiscuit()